header responsive done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+    <!-- This is Header -->
     <header>
         <div class="container header-container">
             <div class="explore">
@@ -46,6 +46,10 @@
 
         </div>
     </header>
+
+    <section class="one">
+
+    </section>
 
 </body>
 
