--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <section class="one">
         <div class="container our-popular-tour-container">
             <div class="our-popular-tour">
-                <h3>Our Popular Tours</h3>
-                <p>Embark on our popular tour and immerse yourself in unforgettable experiences, where every destination unveils a unique tapestry of culture and adventure.</p>
+                <h3 class="heading">Our Popular Tours</h3>
+                <p class="des">Embark on our popular tour and immerse yourself in unforgettable experiences, where every destination unveils a unique tapestry of culture and adventure.</p>
 
                 <ul>
                     <li>Explore a curated selection of our popular tours.</li>
@@ -81,7 +81,7 @@
 
                 </ul>
 
-                <p class="our-popular-tour-des">Embark on our popular tours, where the blend of diverse destinations, meticulously crafted itineraries, and personalized adventures culminate in an unforgettable travel experience, creating memories that last a lifetime.</p>
+                <p class="des">Embark on our popular tours, where the blend of diverse destinations, meticulously crafted itineraries, and personalized adventures culminate in an unforgettable travel experience, creating memories that last a lifetime.</p>
 
                 <button class="btn-primary btn-read">Read More</button>
             </div>
@@ -93,12 +93,31 @@
 
     </section>
 
+    <!-- section two -->
+    <section class="two">
+        <div class="container">
+            <div class="choose-destination">
+                <h3 class="heading">Choose Your Destination</h3>
+                <p class="des description">Choosing a destination for traveling is like selecting a chapter in the book of adventure, each one holding the promise of unique experiences and unforgettable memories</p>
+            </div>
+            <div class="destination-img">
+                <article class="article-1 article">Maldives</article>
+                <article class="article-2 article">Indonesia</article>
+                <article class="article-3 article">Srilanka</article>
+                <article class="article-4 article">North America</article>
+                <article class="article-5 article">Kashmir</article>
+                <article class="article-6 article">Bangladesh</article>
+                <article class="article-7 article">Bandarban</article>
+            </div>
+        </div>
+
+    </section>
     <!-- Section five -->
     <section class="five">
         <div class="container a-simple">
             <div class="our-popular-tour">
-                <h3>A Simple Perfect Place To Get Lost</h3>
-                <p>A simple, perfect place to get lost—an oasis where serenity meets discovery, inviting you to wander, dream, and find beauty in every unexpected corner.</p>
+                <h3 class="heading">A Simple Perfect Place To Get Lost</h3>
+                <p class="des">A simple, perfect place to get lost—an oasis where serenity meets discovery, inviting you to wander, dream, and find beauty in every unexpected corner.</p>
 
                 <ul>
                     <li>Immerse yourself in a tranquil haven, offering a respite from the hustle and bustle of daily life—a perfect place to unwind, recharge, and discover moments of serenity.</li>
