bonus section done

--- a/index.html
+++ b/index.html
@@ -111,6 +111,75 @@
             </div>
         </div>
 
+
+    </section>
+    <!-- section extra -->
+    <section class="extra">
+        <div class="container">
+            <div class="choose-destination">
+                <h3 class="heading">Explore More of Beautiful Bangladesh</h3>
+                <p class="des description">Embark on a journey of boundless discovery, where the allure of exploring more places unveils a tapestry of cultures, landscapes, and experiences waiting to be embraced.</p>
+            </div>
+            <section class="one">
+                <div class="container-extra">
+                    <div class="image box">
+                        <img class="saint" src="./Images/saint.webp" alt="">
+                    </div>
+                    <div class="text box">
+                        <h2 class="saint-martin">Saint Martin</h2>
+                        <p class="saint-martin-des">Saint Martin, with its pristine white-sand beaches and crystal-clear turquoise waters, offers an idyllic escape for those seeking tranquility and relaxation. From Orient Beach to Maho Beach, each shoreline presents a unique blend of natural beauty and serenity.
+                            <br>
+                            <br>
+                            Immerse yourself in the rich cultural tapestry of Saint Martin, where the island's unique history has shaped a vibrant fusion of French and Dutch influences.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="one">
+                <div class="container-extra container-2">
+                    
+                    <div class="text box">
+                        <h2 class="saint-martin">Rangamati</h2>
+                        <p class="saint-martin-des">Rangamati, nestled in the Chittagong Hill Tracts of Bangladesh, enchants visitors with its breathtaking landscapes adorned by serene lakes and lush green hills. 
+                            <br>
+                            <br>
+                            Explore the cultural richness of Rangamati, home to various indigenous communities. Engage with the indigenous people, witness their traditional lifestyle, and discover the vibrant tapestry of local traditions, handicrafts, and festivals that contribute to the unique cultural mosaic of this scenic region.
+                        </p>
+                    </div>
+                    <div class="image box">
+                        <img class="saint" src="./Images/Rangamati.jpg" alt="">
+                    </div>
+                </div>
+            </section>
+        </div>
+    </section>
+
+    <!-- Section three -->
+    <section class="three">
+        <div class="container">
+            <div class="choose-destination">
+                <h3 class="heading">Why Choose Us</h3>
+                <p class="des description">We are offering you best places at best prices. And there is 20% discount for our regular customer.</p>
+            </div>
+            <div class="why-choose">
+                <div class="why-choose-one">
+                    <i class="fa-solid fa-hotel"></i>
+                    <h3 class="hotel">Handpicked Hotels</h3>
+                    <p class="hotel-des">Experience unmatched comfort and hospitality at our hotel, where every stay is a blend of luxury, convenience, and a warm welcome to make your journey truly exceptional.</p>
+                </div>
+                <div class="why-choose-one why-choose-two">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <h3 class="hotel">World Class Service</h3>
+                    <p class="hotel-des">Indulge in world-class service that transcends expectations, where every detail is meticulously curated to elevate your experience into a seamless tapestry of luxury and satisfaction.</p>
+                </div>
+
+            </div>
+            <div class="why-choose-last">
+                <i class="fa-solid fa-tags"></i>
+                <h3 class="hotel">Best Price Guarantee</h3>
+                    <p class="hotel-des">Enjoy peace of mind with our Best Price Guarantee, ensuring you receive the most competitive rates for your travel, coupled with exceptional service and quality.</p>
+            </div>
+        </div>
     </section>
     <!-- Section five -->
     <section class="five">
@@ -136,10 +205,29 @@
                 <p>Watch Our Mountain in Bangladesh</p>
             </div>
         </div>
-        
-
     </section>
-
+    <!-- section six -->
+    <section class="six">
+        <div class="container container-news">
+            <div class="news">
+                <h3 class="hotel">Newsletter</h3>
+                <p class="hotel-des">Get your daily dose of travel news & tips. Sign up today!</p>
+                <form action="">
+                    <input type="text" placeholder="Enter your name" id="enter-name">
+                    <input type="text" placeholder="Enter your email" id="enter-email">
+                    <br>
+                    <button class="btn-primary subscribe">Subscribe</button>
+                </form>
+            </div>
+            <div class="news-img">
+                <img src="./Images/Rectangle 8 (1).png" alt="">
+            </div>
+        </div>
+        <div class="save">
+            <p class="travel">Travel.com</p>
+            <p class="save-up">Save up to 70%</p>
+        </div>
+    </section>
     <!-- This is footer -->
     <footer>
         <div class="footer">
