--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="one">
         <div class="container our-popular-tour-container">
             <div class="our-popular-tour">
-                <h3 class="heading">Our Popular Tours</h3>
+                <h3 class="heading choose-head">Our Popular Tours</h3>
                 <p class="des">Embark on our popular tour and immerse yourself in unforgettable experiences, where every destination unveils a unique tapestry of culture and adventure.</p>
 
                 <ul>
@@ -97,7 +97,7 @@
     <section class="two">
         <div class="container">
             <div class="choose-destination">
-                <h3 class="heading">Choose Your Destination</h3>
+                <h3 class="heading choose-head">Choose Your Destination</h3>
                 <p class="des description">Choosing a destination for traveling is like selecting a chapter in the book of adventure, each one holding the promise of unique experiences and unforgettable memories</p>
             </div>
             <div class="destination-img">
@@ -117,7 +117,7 @@
     <section class="extra">
         <div class="container">
             <div class="choose-destination">
-                <h3 class="heading">Explore More of Beautiful Bangladesh</h3>
+                <h3 class="heading choose-head">Explore More of Beautiful Bangladesh</h3>
                 <p class="des description">Embark on a journey of boundless discovery, where the allure of exploring more places unveils a tapestry of cultures, landscapes, and experiences waiting to be embraced.</p>
             </div>
             <section class="one">
@@ -126,7 +126,7 @@
                         <img class="saint" src="./Images/saint.webp" alt="">
                     </div>
                     <div class="text box">
-                        <h2 class="saint-martin">Saint Martin</h2>
+                        <h2 class="saint-martin choose-head">Saint Martin</h2>
                         <p class="saint-martin-des">Saint Martin, with its pristine white-sand beaches and crystal-clear turquoise waters, offers an idyllic escape for those seeking tranquility and relaxation. From Orient Beach to Maho Beach, each shoreline presents a unique blend of natural beauty and serenity.
                             <br>
                             <br>
@@ -139,7 +139,7 @@
                 <div class="container-extra container-2">
                     
                     <div class="text box">
-                        <h2 class="saint-martin">Rangamati</h2>
+                        <h2 class="saint-martin choose-head">Rangamati</h2>
                         <p class="saint-martin-des">Rangamati, nestled in the Chittagong Hill Tracts of Bangladesh, enchants visitors with its breathtaking landscapes adorned by serene lakes and lush green hills. 
                             <br>
                             <br>
@@ -158,7 +158,7 @@
     <section class="three">
         <div class="container">
             <div class="choose-destination">
-                <h3 class="heading">Why Choose Us</h3>
+                <h3 class="heading choose-head">Why Choose Us</h3>
                 <p class="des description">We are offering you best places at best prices. And there is 20% discount for our regular customer.</p>
             </div>
             <div class="why-choose">
@@ -185,7 +185,7 @@
     <section class="five">
         <div class="container a-simple">
             <div class="our-popular-tour">
-                <h3 class="heading">A Simple Perfect Place To Get Lost</h3>
+                <h3 class="heading choose-head">A Simple Perfect Place To Get Lost</h3>
                 <p class="des">A simple, perfect place to get lost—an oasis where serenity meets discovery, inviting you to wander, dream, and find beauty in every unexpected corner.</p>
 
                 <ul>
